deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-api
  template:
    metadata:
      labels:
        app: scheduler-api
    spec:
      serviceAccountName: scheduler-api-serviceaccount
      containers:
        - name: scheduler-api
          image: scheduler-api
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: openlab-scheduler-data
              mountPath: /app/data
      volumes:
        - name: openlab-scheduler-data
          emptyDir: {}
