deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: scheduler-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  # type: NodePort
